[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "scikit-optimize"
authors = [{name = "The scikit-optimize contributors"}]
license = {text = "BSD 3-clause"}
description = "Sequential model-based optimization toolbox."
readme = "README.rst"
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "joblib>=0.11",
    "pyaml>=16.9",
    "numpy>=1.20.3",
    "scipy>=1.1.0",
    "scikit-learn>=1.0.0",
    "packaging>=21.3",
]
version = "0.10.2"

[project.urls]
Homepage = "https://scikit-optimize.readthedocs.io/en/latest/contents.html"
"Source Code" = "https://github.com/holgern/scikit-optimize"
"Bug Tracker" = "https://github.com/holgern/scikit-optimize/issues"

[project.optional-dependencies]
plots = [
    "matplotlib>=2.0.0",
]
dev = [
    "flake8",
    "pandas",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
]
doc = [
    "memory_profiler",
    "numpydoc",
    "sphinx",
    "pydata-sphinx-theme",
    "sphinx-gallery>=0.6",
]

[tool.setuptools]
packages = [
    "skopt",
    "skopt.learning",
    "skopt.optimizer",
    "skopt.space",
    "skopt.learning.gaussian_process",
    "skopt.sampler",
]
include-package-data = false

[tool.distutils.bdist_wheel]
universal = 1
